; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_elantech.c_elantech_reconnect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_elantech.c_elantech_reconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.psmouse = type { i32 }

@.str = private unnamed_addr constant [49 x i8] c"failed to put touchpad back into absolute mode.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.psmouse*)* @elantech_reconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @elantech_reconnect(%struct.psmouse* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.psmouse*, align 8
  store %struct.psmouse* %0, %struct.psmouse** %3, align 8
  %4 = load %struct.psmouse*, %struct.psmouse** %3, align 8
  %5 = call i32 @psmouse_reset(%struct.psmouse* %4)
  %6 = load %struct.psmouse*, %struct.psmouse** %3, align 8
  %7 = call i64 @elantech_detect(%struct.psmouse* %6, i32 0)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.psmouse*, %struct.psmouse** %3, align 8
  %12 = call i64 @elantech_set_absolute_mode(%struct.psmouse* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load %struct.psmouse*, %struct.psmouse** %3, align 8
  %16 = call i32 @psmouse_err(%struct.psmouse* %15, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %18

17:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %14, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @psmouse_reset(%struct.psmouse*) #1

declare dso_local i64 @elantech_detect(%struct.psmouse*, i32) #1

declare dso_local i64 @elantech_set_absolute_mode(%struct.psmouse*) #1

declare dso_local i32 @psmouse_err(%struct.psmouse*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
